grid text-alignment fixed

--- a/styles/global.css
+++ b/styles/global.css
@@ -96,6 +96,7 @@ article img {
 .article-body-preview {
   font-size: 1em;
   font-weight: 400;
+  text-align: justify;
 }
 
 /* footer */
